# plant-store

./: README.md
plant/: package-lock.json
plant/src/: AddProduct.svelte  Admin.svelte  AdminOrders.svelte  App.svelte  Cart.svelte  Home.svelte  Login.svelte  Orders.svelte  Register.svelte  adminLogin.svelte
plant_backend/: .env  Cargo.toml  plant.db
plant_backend/src/: main.rs
