[package]
name = "plant_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
